--- a/src/epub/text/surrender.xhtml
+++ b/src/epub/text/surrender.xhtml
@@ -14,7 +14,7 @@
 					<span epub:type="ordinal z3998:roman">III</span>
 				</h3>
 			</hgroup>
-			<p>The story of Louise Bentley, who became Mrs. John Hardy and lived with her husband in a brick house on Elm Street in Winesburg, is a story of misunderstanding.</p>
+			<p>The story of Louise Bentley, who became <abbr>Mrs.</abbr> John Hardy and lived with her husband in a brick house on Elm Street in Winesburg, is a story of misunderstanding.</p>
 			<p>Before such women as Louise can be understood and their lives made livable, much will have to be done. Thoughtful books will have to be written and thoughtful lives lived by people about them.</p>
 			<p>Born of a delicate and overworked mother, and an impulsive, hard, imaginative father, who did not look with favor upon her coming into the world, Louise was from childhood a neurotic, one of the race of over-sensitive women that in later days industrialism was to bring in such great numbers into the world.</p>
 			<p>During her early years she lived on the Bentley farm, a silent, moody child, wanting love more than anything else in the world and not getting it. When she was fifteen she went to live in Winesburg with the family of Albert Hardy, who had a store for the sale of buggies and wagons, and who was a member of the town board of education.</p>
