--- a/src/epub/text/terror.xhtml
+++ b/src/epub/text/terror.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<article id="surrender" epub:type="se:short-story">
+		<article id="terror" epub:type="se:short-story">
 			<hgroup>
 				<h2 epub:type="title">Terror</h2>
 				<h3>
