--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,95 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/introduction.xhtml">Introduction</a>
+				</li>
+				<li>
+					<a href="text/dedication.xhtml">Dedication</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Winesburg, Ohio</a>
+					<ol>
+						<li>
+							<a href="text/the-book-of-the-grotesque.xhtml">The Book of the Grotesque</a>
+						</li>
+						<li>
+							<a href="text/hands.xhtml">Hands</a>
+						</li>
+						<li>
+							<a href="text/paper-pills.xhtml">Paper Pills</a>
+						</li>
+						<li>
+							<a href="text/mother.xhtml">Mother</a>
+						</li>
+						<li>
+							<a href="text/the-philosopher.xhtml">The Philosopher</a>
+						</li>
+						<li>
+							<a href="text/nobody-knows.xhtml">Nobody Knows</a>
+						</li>
+						<li>
+							<a href="text/godliness.xhtml">Godliness</a>
+							<ol>
+								<li>
+									<a href="text/godliness.xhtml#godliness-1">Part <span epub:type="z3998:roman">I</span></a>
+								</li>
+								<li>
+									<a href="text/godliness.xhtml#godliness-2">Part <span epub:type="z3998:roman">II</span></a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/surrender.xhtml">Part <span epub:type="z3998:roman">III</span></a>
+						</li>
+						<li>
+							<a href="text/terror.xhtml">Part <span epub:type="z3998:roman">IV</span></a>
+						</li>
+						<li>
+							<a href="text/a-man-of-ideas.xhtml">A Man of Ideas</a>
+						</li>
+						<li>
+							<a href="text/adventure.xhtml">Adventure</a>
+						</li>
+						<li>
+							<a href="text/respectability.xhtml">Respectability</a>
+						</li>
+						<li>
+							<a href="text/the-thinker.xhtml">The Thinker</a>
+						</li>
+						<li>
+							<a href="text/tandy.xhtml">Tandy</a>
+						</li>
+						<li>
+							<a href="text/the-strength-of-god.xhtml">The Strength of God</a>
+						</li>
+						<li>
+							<a href="text/the-teacher.xhtml">The Teacher</a>
+						</li>
+						<li>
+							<a href="text/loneliness.xhtml">Loneliness</a>
+						</li>
+						<li>
+							<a href="text/an-awakening.xhtml">An Awakening</a>
+						</li>
+						<li>
+							<a href="text/queer.xhtml">“Queer”</a>
+						</li>
+						<li>
+							<a href="text/the-untold-lie.xhtml">The Untold Lie</a>
+						</li>
+						<li>
+							<a href="text/drink.xhtml">Drink</a>
+						</li>
+						<li>
+							<a href="text/death.xhtml">Death</a>
+						</li>
+						<li>
+							<a href="text/sophistication.xhtml">Sophistication</a>
+						</li>
+						<li>
+							<a href="text/departure.xhtml">Departure</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +122,16 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/introduction.xhtml" epub:type="frontmatter introduction">Introduction</a>
+				</li>
+				<li>
+					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
+					<a href="text/the-book-of-the-grotesque.xhtml" epub:type="bodymatter z3998:fiction">Winesburg, Ohio</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
