Update title semantics

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -52,10 +52,10 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/surrender.xhtml">Part <span epub:type="z3998:roman">III</span></a>
+							<a href="text/surrender.xhtml">Surrender</a>
 						</li>
 						<li>
-							<a href="text/terror.xhtml">Part <span epub:type="z3998:roman">IV</span></a>
+							<a href="text/terror.xhtml">Terror</a>
 						</li>
 						<li>
 							<a href="text/a-man-of-ideas.xhtml">A Man of Ideas</a>
