--- a/src/epub/text/godliness.xhtml
+++ b/src/epub/text/godliness.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Godliness</h2>
 				<h3 epub:type="subtitle">A Tale in Four Parts</h3>
 			</hgroup>
-			<section id="godliness-1" epub:type="subchapter">
+			<section id="godliness-1" epub:type="z3998:subchapter">
 				<h3>
 					<span epub:type="label">Part</span>
 					<span epub:type="ordinal z3998:roman">I</span>
@@ -41,7 +41,7 @@
 				<p>Jesse thought that as the true servant of God the entire stretch of country through which he had walked should have come into his possession. He thought of his dead brothers and blamed them that they had not worked harder and achieved more. Before him in the moonlight the tiny stream ran down over stones, and he began to think of the men of old times who like himself had owned flocks and lands.</p>
 				<p>A fantastic impulse, half fear, half greediness, took possession of Jesse Bentley. He remembered how in the old Bible story the Lord had appeared to that other Jesse and told him to send his son David to where Saul and the men of Israel were fighting the Philistines in the Valley of Elah. Into Jesse’s mind came the conviction that all of the Ohio farmers who owned land in the valley of Wine Creek were Philistines and enemies of God. “Suppose,” he whispered to himself, “there should come from among them one who, like Goliath the Philistine of Gath, could defeat me and take from me my possessions.” In fancy he felt the sickening dread that he thought must have lain heavy on the heart of Saul before the coming of David. Jumping to his feet, he began to run through the night. As he ran he called to God. His voice carried far over the low hills. “Jehovah of Hosts,” he cried, “send to me this night out of the womb of Katherine, a son. Let Thy grace alight upon me. Send me a son to be called David who shall help me to pluck at last all of these lands out of the hands of the Philistines and turn them to Thy service and to the building of Thy kingdom on earth.”</p>
 			</section>
-			<section id="godliness-2" epub:type="subchapter">
+			<section id="godliness-2" epub:type="z3998:subchapter">
 				<h3>
 					<span epub:type="label">Part</span>
 					<span epub:type="ordinal z3998:roman">II</span>
