--- a/src/epub/text/halftitlepage.xhtml
+++ b/src/epub/text/halftitlepage.xhtml
@@ -7,7 +7,10 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="halftitlepage" epub:type="halftitlepage">
-			<h1 epub:type="fulltitle">Winesburg, Ohio</h1>
+			<hgroup epub:type="fulltitle">
+				<h1 epub:type="title">Winesburg, Ohio</h1>
+				<h2 epub:type="subtitle">A Group of Tales of Ohio Small-Town Life</h2>
+			</hgroup>
 		</section>
 	</body>
 </html>
