Update <hgroup> children after first <h#> to <p>, ref. new HTML standard

--- a/src/epub/text/godliness.xhtml
+++ b/src/epub/text/godliness.xhtml
@@ -9,7 +9,7 @@
 		<article id="godliness" epub:type="se:short-story">
 			<hgroup>
 				<h2 epub:type="title">Godliness</h2>
-				<h3 epub:type="subtitle">A Tale in Four Parts</h3>
+				<p epub:type="subtitle">A Tale in Four Parts</p>
 			</hgroup>
 			<section id="godliness-1" epub:type="z3998:subchapter">
 				<h3>
