--- a/src/epub/text/halftitlepage.xhtml
+++ b/src/epub/text/halftitlepage.xhtml
@@ -9,7 +9,7 @@
 		<section id="halftitlepage" epub:type="halftitlepage">
 			<hgroup epub:type="fulltitle">
 				<h2 epub:type="title">Winesburg, Ohio</h2>
-				<h3 epub:type="subtitle">A Group of Tales of Ohio Small-Town Life</h3>
+				<p epub:type="subtitle">A Group of Tales of Ohio Small-Town Life</p>
 			</hgroup>
 		</section>
 	</body>
