--- a/src/epub/text/terror.xhtml
+++ b/src/epub/text/terror.xhtml
@@ -9,10 +9,10 @@
 		<article id="terror" epub:type="se:short-story">
 			<hgroup>
 				<h2 epub:type="title">Terror</h2>
-				<h3 epub:type="subtitle">
+				<p epub:type="subtitle">
 					<span epub:type="label">Part</span>
 					<span epub:type="ordinal z3998:roman">IV</span>
-				</h3>
+				</p>
 			</hgroup>
 			<p>When David Hardy was a tall boy of fifteen, he, like his mother, had an adventure that changed the whole current of his life and sent him out of his quiet corner into the world. The shell of the circumstances of his life was broken and he was compelled to start forth. He left Winesburg and no one there ever saw him again. After his disappearance, his mother and grandfather both died and his father became very rich. He spent much money in trying to locate his son, but that is no part of this story.</p>
 			<p>It was in the late fall of an unusual year on the Bentley farms. Everywhere the crops had been heavy. That spring, Jesse had bought part of a long strip of black swamp land that lay in the valley of Wine Creek. He got the land at a low price but had spent a large sum of money to improve it. Great ditches had to be dug and thousands of tile laid. Neighboring farmers shook their heads over the expense. Some of them laughed and hoped that Jesse would lose heavily by the venture, but the old man went silently on with the work and said nothing.</p>
