--- a/src/epub/text/surrender.xhtml
+++ b/src/epub/text/surrender.xhtml
@@ -9,10 +9,10 @@
 		<article id="surrender" epub:type="se:short-story">
 			<hgroup>
 				<h2 epub:type="title">Surrender</h2>
-				<h3 epub:type="subtitle">
+				<p epub:type="subtitle">
 					<span epub:type="label">Part</span>
 					<span epub:type="ordinal z3998:roman">III</span>
-				</h3>
+				</p>
 			</hgroup>
 			<p>The story of Louise Bentley, who became <abbr>Mrs.</abbr> John Hardy and lived with her husband in a brick house on Elm Street in Winesburg, is a story of misunderstanding.</p>
 			<p>Before such women as Louise can be understood and their lives made livable, much will have to be done. Thoughtful books will have to be written and thoughtful lives lived by people about them.</p>
